test/parser/datatypes-missing-parens.b3.expect
Error:
5: datatype NoParens = Ctor x: int
                            ^
expected '('

